--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ after_success:
   - docker build -t damodarag/multi-server ./server
   - docker build -t damodarag/multi-worker ./worker
   # Log in to the docker CLI
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  #- echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD" docker.io
   # Take those images and push them to docker hub
   - docker push damodarag/multi-client
   - docker push damodarag/multi-nginx
