--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ deploy:
   provider: elasticbeanstalk
   region: "us-east-2"
   app: "multi-docker"
-  env: "MultiDocker-env"
+  env: "Multidocker-env-1"
   bucket_name: "elasticbeanstalk-us-east-2-889401540119"
   bucket_path: "docker-multi"
   on:
