--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,8 @@ after_success:
 deploy:
   provider: elasticbeanstalk
   region: "us-east-2"
-  app: "multi-docker"
-  env: "Multidocker-env-1"
+  app: "multi-docker-test"
+  env: "Multidockertest-env"
   bucket_name: "elasticbeanstalk-us-east-2-889401540119"
   bucket_path: "docker-multi"
   on:
